tests/neg/i5313.scala
def test =
  System.getClass  // error
  System.toString  // error
  System == null  // error
  System eq null  // error
  System.wait()  // error
